<resources>
    <string name="title_document">ID / Identity Card</string>
    <string name="title_serial_auto">LICENCE / PLATE</string>
    <string name="title_activity_home"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="external_dir">GetSignature</string>
    <string name="action_settings">Exit</string>
    <string name="uri_prompt">Client</string>
    <string-array name="uri_arrays">
        <item>as_remis_web</item>
        <item>universal</item>
        <item>5estrellas</item>
        <item>antonella</item>
        <item>byb</item>
        <item>carrasco</item>
        <item>demo</item>
        <item>intercar</item>
        <item>firstclass</item>
        <item>kollcar</item>
        <item>laespañola</item>
        <item>patagonia</item>
        <item>premyscar</item>
        <item>prestige</item>
        <item>red24</item>
        <item>reminor</item>
        <item>remisat</item>
        <item>remisesArg</item>
        <item>roybal</item>
        <item>talcahuano</item>
        <item>talcahuano2</item>
        <item>transtravel</item>
        <item>turismocentro</item>
        <item>urbana</item>
        <item>viapanam</item>
        <item>vlz</item>
        <item>developer</item>


    </string-array>
    <string-array name="cabecera_tabla">
        <item>Date</item>
        <item>Concept</item>
        <item>Amount in Favor</item>
        <item>Amount to Pay</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_travel_dialog">TravelDialogActivity</string>
    <string name="create_floating_widget">Create Floating Widget</string>
    <string name="floating_widget_label">Asremis</string>
    <string name="floating_widget_details">Press here to access app</string>
    <string name="draw_other_app_permission_denied">Draw over other app permission not available. App won\'t work without permission. Please try again.</string>
    <string name="passager">Passenger</string>
    <string name="driver">Driver</string>
    <string name="sign_in">Register</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="ingresar">Log in</string>
    <string name="registrar">New Account</string>
    <string name="usuario_email">User or Email</string>
    <string name="contraseña">Password</string>
    <string name="validando">Validating...</string>
    <string name="cargando">Loading...</string>
    <string name="nueva_version">New Version Available !</string>
    <string name="texto_version">You must update to have new benefits and news!</string>
    <string name="fallo_general">Something wrong, please try again</string>
    <string name="actualizar">Update</string>
    <string name="version_actual">Actual version</string>
    <string name="usuario_contraseña_invalida">Invalid User or password</string>
    <string name="usuario_inactivo">Hello! You are already logged! But you have not been activated by the company!</string>
    <string name="texto_recovery_pass">Please, login with your email for recovering password</string>
    <string name="email">Email</string>
    <string name="recuperar_contraseña">¿Recover Password?</string>
    <string name="recuperar">Recover</string>
    <string name="email_invalido">Enter a valid email</string>
    <string name="completar_campo">Required field</string>
    <string name="registrar_pasajero">Sign in as Passenger</string>
    <string name="registrar_chofer">Sign in as Driver</string>
    <string name="nombre">Name</string>
    <string name="apellido">Last Name</string>
    <string name="telefono">Phone</string>
    <string name="repetir_contraseña">Retry password</string>
    <string name="cuenta_costo">Account - C- Center</string>
    <string name="empresa">Company</string>
    <string name="centro_costo">Cost Center</string>
    <string name="num_chofer">N. Driver</string>
    <string name="vehiculo">Vehicle</string>
    <string name="marca">Brand</string>
    <string name="modelo">Model</string>
    <string name="categoria">Category</string>
    <string name="dominio">Licence Plate</string>
    <string name="datos_personales">Personal information</string>
    <string name="seguridad">Security</string>
    <string name="cuenta">Account</string>
    <string name="email_error_registrado">This email was already used</string>
    <string name="chofer_error_registrado">This number was already used</string>
    <string name="registro_exitoso">Successful registration</string>
    <string name="contraeseña_diferente">Both password must be the same</string>
    <string name="no_categorias_agregado">No categories added </string>
    <string name="no_modelo_agregado">No models added</string>
    <string name="no_marcas_agregada">No brands added</string>
    <string name="cliente_registrado">Client Registered Successfully</string>
    <string name="cliente_ya_registrado">This client already exists. Please, try another email</string>
    <string name="chofer_registrado">Driver registered Successfully</string>
    <string name="no_centro_costo">No Center of cost in this account</string>
    <string name="no_cuenta">No account in this company</string>
    <string name="registro_pasajero">Passenger registration</string>
    <string name="registro_chofer">Driver Registration</string>
    <string name="especificar_marca_categoria">You must specify your vehicle brand and category</string>
    <string name="pertenesco_a_una_empresa">I belong to a company</string>
    <string name="seleccion_empresa">You must select a company</string>
    <string name="capturando_ubicacion"> Capturing location</string>
    <string name="captura_ubiacion_detenida">Location has been stopped</string>
    <string name="origen_viaje">Travel origin</string>
    <string name="destino_viaje">Travel destiny</string>
    <string name="gps">GPS Inactive</string>
    <string name="activar_gps">Activate GPS</string>
    <string name="mensaje_gps">You must activate the GPS to be able to use the application correctly</string>
    <string name="mi_ubicacion">My location</string>
    <string name="historial">History</string>
    <string name="estado_de_cuenta">Account Status</string>
    <string name="notificaciones">Notifications</string>
    <string name="reservas">Reservations</string>
    <string name="chat">Chat</string>
    <string name="reporte_falla">Report failure</string>
    <string name="perfil">Profile</string>
    <string name="salir">Exit</string>
    <string name="recargar">Reload</string>
    <string name="usuario">User</string>
    <string name="frequent_questions">FAQs</string>
    <string name="mapa">Map</string>
    <string name="place_to_pay_question_title_1">1. What is PlaceToPay?</string>
    <string name="place_to_pay_question_description_1">PlacetoPay is the electronic payment platform that [NOMBRE_COMERCIO] uses to process online the transactions generated in the application [NOMBRE_COMERCIO] with the payment methods enabled for this purpose. </string>
    <string name="place_to_pay_question_title_2">2. How can I pay?</string>
    <string name="place_to_pay_question_description_2">In the application [NOMBRE_COMERCIO] you can make your payment with the means enabled for this purpose. You, according to the payment options chosen by the merchant, will be able to pay through Diners, Discover, Visa and MasterCard enabled payments; of all banks with current and deferred payments, only cards issued by Banco Pichincha, Diners, Loja, BGR and Manabí.</string>
    <string name="place_to_pay_question_title_3">3.	Is it safe to enter my bank details in this application?</string>
    <string name="place_to_pay_question_description_3">To protect your data [NOMBRE_COMERCIO] delegates to PlacetoPay the capture of sensitive information. Our payment platform complies with the highest standards required by the international PCI DSS standard for security in credit card transactions. It also has an SSL security certificate issued by GeoTrust a Verisign company, which guarantees secure communications by encrypting all data to and from the site; In this way, you can feel safe when entering your card information.

PlacetoPay also has constant monitoring of McAfee Secure and the signing of electronic messages with Certicámara.

PlacetoPay is a brand of the Colombian company EGM Ingeniería Sin Fronteras S.A.S.
</string>
    <string name="place_to_pay_question_title_4">4.	Can I make the payment any day and at any time? </string>
    <string name="place_to_pay_question_description_4">Yes, in [NOMBRE_COMERCIO] you can make your purchases online 7 days a week, 24 hours a day just a click away.</string>
    <string name="place_to_pay_question_title_5">5.	Can I change the payment method?</string>
    <string name="place_to_pay_question_description_5">If you have not yet completed your payment, you can return to the initial step and choose the payment method you prefer. Once the purchase is completed, it is not possible to change the payment method.</string>
    <string name="place_to_pay_question_title_6">6.	Does paying electronically have any value for me as a buyer?</string>
    <string name="place_to_pay_question_description_6">No, electronic payments made through PlacetoPay do not generate additional costs for the buyer.</string>
    <string name="place_to_pay_question_title_7">7.	What should I do if my transaction did not complete?</string>
    <string name="place_to_pay_question_description_7">In the first instance you should check if a payment confirmation email arrived in your email account (the one registered at the time of making the payment), if you have not received it, you should contact [MAIL_COMERCIO] to confirm the status of the transaction.

     In the event that your transaction has declined, you must verify if the account information is valid, is enabled for non-face-to-face purchases and if you have an available space or balance. If after this you continue with the declination you should contact [NOMBRE_COMERCIO]. Ultimately, you can send your request to servicioposventa@placetopay.ec.
    </string>
    <string name="place_to_pay_question_title_8">8.	What should I do if I did not receive proof of payment?</string>
    <string name="place_to_pay_question_description_8">For each transaction approved through PlacetoPay, you will receive proof of payment with the purchase reference in the email address you indicated when you paid. If you do not receive it, you can contact the email [MAIL_COMERCIO], to request the receipt of the receipt to the same email address registered when paying. Ultimately, you can send your request to servicioposventa@placetopay.ec.</string>
    <string name="place_to_pay_question_title_9">9. I did not receive the service I bought, what do I do?</string>
    <string name="place_to_pay_question_description_9">You must verify if the transaction was successful on your bank statement. If so, you should contact [NOMBRE_COMERCIO].</string>
    <string name="place_to_pay_question_title_10">Terms and Conditions</string>
    <string name="place_to_pay_question_description_10">https://as-nube.com/privacyPolitics.html</string>
    <string name="c_mo_desea_ingresar_el_destino">How do you want to enter the destination?</string>
    <string name="cl_sica_recomendada">Classic (recomended)</string>
    <string name="ingresar_direccion_exacta">You must enter an exact address and it will be validated that it exists on the map.</string>
    <string name="describir_direccion">Describe Address</string>
    <string name="puede_ingresar_direccion_sin_validar">You can enter the address without having to validate it on the map.</string>
</resources>