<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorNegroClaro"

        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blanco"
        android:textSize="21sp"
        android:text="@string/c_mo_desea_ingresar_el_destino"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"

        android:background="@color/colorNegroClaro"
        />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_classic_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cl_sica_recomendada"
                    style="@style/TitleCard"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingresar_direccion_exacta"
                    style="@style/TextCard"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_custom_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="0dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/describir_direccion"
                    style="@style/TitleCard"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/puede_ingresar_direccion_sin_validar"
                    style="@style/TextCard"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <ImageView
        android:id="@+id/btn_close_choose_address"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="14dp"
        app:srcCompat="@drawable/ic_close"
        android:tint="@color/white87"

        />

</androidx.constraintlayout.widget.ConstraintLayout>